--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
 
 * {
     margin: 0;
@@ -9,3 +10,77 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+.container {
+    max-width: 90%;
+    margin: 0 0 0 10%;
+    /* margin: 0 auto; */
+    /* background-color: rgb(139, 249, 190); */
+}
+
+.branding {
+    font-size: 1.3rem;
+}
+
+nav {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(255,255, 255, 0.2);
+    z-index: -2;
+}
+
+.navbar {
+    position: absolute;
+    right: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-item {
+    list-style: none;
+    margin-right: 1.5rem;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: rgb(34, 33, 33);
+}
+
+.wrapper {
+    /* background-color: grey; */
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-description {
+    background-color: skyblue;
+    max-width: 45%;
+}
+
+.intro-heading {
+    font-family: 'Playfair Display', serif;
+    color: rgb(34, 33, 33);
+}
+
+.intro-description {
+    background-color: grey;
+    max-width: 90%;
+}
+
+.header-photo {
+    width: 45rem;
+    height: 35rem;
+    background-image: url('images/yellow-bg.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 5;
+}
+
+
+
