--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     font-size: 1.3rem;
     padding: 0.2rem;
     font-weight: bold;
-    letter-spacing: 0.2rem;
+    font-family: 'Playfair Display', serif;
 }
 
 nav {
