--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
 
+:root {
+    --main-color: rgb(38, 38, 38);
+    /* --primary-color: rgb(216, 181, 6); */
+    --primary-color: rgb(3, 188, 135);
+    --text-color: white;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -12,12 +19,12 @@ html {
 }
 
 body {
+    background-color: var(--main-color);
     font-family: 'Poppins', sans-serif;
 }
 
 .btn-scroll {
-    /* display: none; */
-    background-color: rgb(216, 181, 6);
+    background-color: var(--primary-color);
     position: fixed;
     bottom: 2rem;
     right: 1rem;
@@ -25,7 +32,6 @@ body {
     border: none;
     outline: none;
     cursor: pointer;
-    box-shadow: 0 0 5px 1px rgb(80, 78, 78);
     transition: all 0.4s ease-in-out;
     z-index: 99;
     border-radius: 5px;
@@ -50,6 +56,7 @@ body {
 
 /* Navbar and Branding */
 .branding {
+    color: var(--text-color);
     font-size: 1.3rem;
     padding: 0.2rem;
     font-weight: bold;
@@ -76,7 +83,7 @@ nav {
     height: 3px;
     margin: 5px auto;
     transition: all 0.4s ease-in-out;
-    background-color: black;
+    background-color: var(--text-color);
 }
 
 .navbar {
@@ -93,13 +100,27 @@ nav {
 }
 
 .nav-link {
+    position: relative;
     text-decoration: none;
-    color: rgb(34, 33, 33);
+    color: var(--text-color);
     transition: all 0.1s ease-in-out;
 }
 
-.nav-link:hover {
-    border-bottom: 3px solid rgb(65, 64, 64);
+.nav-link::after {
+    position: absolute;
+    width: 100%;
+    content: '';
+    left: 0;
+    bottom: 0;
+    min-height: 3px;
+    color: var(--text-color);
+    background-color: var(--primary-color);
+    transform: scale(0, 1);
+    transition: all 0.4s ease-in-out;
+}
+
+.nav-link:hover::after {
+    transform: scale(1, 1);
 }
 
 .wrapper {
@@ -111,6 +132,7 @@ nav {
 }
 
 .header-description {
+    color: var(--text-color);
     padding: 1rem;
     max-width: 45%;
 }
@@ -118,20 +140,20 @@ nav {
 .small-text {
     text-align: center;
     font-size: 0.8rem;
-    color: rgb(232, 196, 6);
+    color: var(--primary-color);
     font-weight: bold;
 }
 
 .intro-heading {
     font-size: 2.2rem;
     font-family: 'Playfair Display', serif;
-    color: rgb(34, 33, 33);
+    color: var(--text-color);
 }
 
 .intro-description {
     margin-top: 1.3rem;
     max-width: 90%;
-    color: rgb(58, 56, 56);
+    color: var(--text-color);
 }
 
 .btns {
@@ -146,15 +168,15 @@ nav {
 .personal-photo {
     width: 13rem;
     height: 14rem;
-    border: 3px solid rgb(216, 181, 6);
+    border: 3px solid var(--primary-color);
     border-radius: 50%;
 }
 
 .projects-btn {
     color: rgb(48, 48, 48);
     padding: 0.3rem 1rem;
-    background-color: rgb(232, 195, 6);
-    border: 1px solid rgb(232, 196, 6);
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
     outline: none;
     cursor: pointer;
     margin-right: 1rem;
@@ -163,12 +185,12 @@ nav {
 }
 
 .projects-btn:hover {
-    background-color: rgb(216, 181, 6);
+    background-color: var(--primary-color);
 }
 
 .projects-btn-link {
     text-decoration: none;
-    color: rgb(34, 33, 33);
+    color: var(--text-color);
 }
 
 .repo-btn {
@@ -199,13 +221,14 @@ nav {
 .projects-main-heading {
     font-family: 'Playfair Display', serif;
     text-align: center;
+    color: var(--text-color);
 }
 
 .border-bottom {
     margin: 0.3rem auto;
     width: 4rem;
     height: 3px;
-    background-color: rgb(216, 181, 6);
+    background-color: var(--primary-color);
 }
 
 .p-wrapper {
@@ -214,6 +237,7 @@ nav {
 }
 
 .projects-descriptions {
+    color: var(--text-color);
     margin: 0 0 3rem 0;
     padding: 2rem 5rem;
     display: flex;
@@ -260,7 +284,6 @@ nav {
 
 .p-image {
     width: 15rem;
-    box-shadow: 0 0 2px 1px rgb(164, 163, 163);
 }
 
 .project-2 {
@@ -279,9 +302,11 @@ nav {
 .skills-heading {
     text-align: center;
     font-family: 'Playfair Display', serif;
+    color: var(--text-color);
 }
 
 .skills-description {
+    color: var(--text-color);
     margin: 1.5rem auto;
     max-width: 60%;
     text-align: center
@@ -295,6 +320,7 @@ nav {
 }
 
 .card {
+    color: var(--text-color);
     border-radius: 5px;
     padding: 1rem;
     max-width: 20rem;
@@ -332,6 +358,7 @@ nav {
 }
 
 .f-para {
+    color: var(--text-color);
     padding: 1rem 0;
     text-align: center;
 }
